# real-a2a-crossplatform

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
.codex/skills/ralph2ralph/: SKILL.md
.github/workflows/: release.yml
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: continue-chatting.ps1  continue-chatting.sh
plugin/skills/ralph2ralph/: SKILL.md
scripts/: install.ps1  install.sh  launch-swarm.ps1  launch-swarm.sh  stop-swarm.ps1  stop-swarm.sh
src/: main.rs
